kubernetes-in-one-shot/nginx/daemonset.yml
kind: DaemonSet
apiVersion: apps/v1

metadata:
  name: nginx-daemonsets
  namespace: nginx

spec:
  # selector selecting the matchLabels app
  selector: 
    # select the app with labels nginx
    matchLabels:
      app: nginx 

  template:
    metadata:
      name: nginx-dmn-pod
      labels:
        app: nginx
    spec:
      containers:
        - name : nginx
          image: nginx:latest
          ports:
            - containerPort: 80
