kubernetes-in-one-shot/nginx/deployment.yml
kind: Deployment
apiVersion: apps/v1

metadata:
  name: nginx-deployment
  namespace: nginx

spec:
  replicas: 2
  # selector selecting the matchLabels app
  selector: 
    # select the app with labels nginx
    matchLabels:
      app: nginx 

  template:
    metadata:
      name: nginx-dep-pod
      labels:
        app: nginx
    spec:
      containers:
        - name : nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          resources:
            # minimum resources 
            requests:
              cpu: 100m
              memory: 128Mi
            # maximum resources
            limits:
              cpu: 200m
              memory: 285Mi
          volumeMounts:
            - mountPath: /var/www/html
              name: my-volume
      volumes:
        - name: my-volume
          persistentVolumeClaim:
            claimName: local-pv
