kubernetes-in-one-shot/nginx/service.yml
apiVersion: v1
kind: Service

metadata:
  name: nginx-service
  namespace: nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      # Outside Port
      port: 80
      # port inside the pod
      targetPort: 80
  type: ClusterIP
